# linear-issue-maker

./: .gitignore  IMPLEMENTATION_SUMMARY.md  PRODUCT_DESCRIPTION.md  README.md  example-issue.txt  pyproject.toml  test-issue-2.txt  test_connection.py  visionary-stories-fixed.csv  visionary-stories.csv
examples/: issues.csv
src/linear_issue_maker/: __init__.py  base_client.py  cli.py  client_factory.py  graphql_client.py  mcp_client.py  parser.py  settings.py
tests/: test_mcp_client.py  test_parser.py
