[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "linear-issue-maker"
version = "0.1.0"
description = "CLI to turn structured text blocks into Linear issues via MCP."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer[all]>=0.12.3",
    "pydantic>=2.7.0",
    "rich>=13.7.1",
    "mcp>=1.24.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
]

[project.scripts]
linear-issue-maker = "linear_issue_maker.cli:main"
